# address_verification

./: .flake8  .gitignore  README.md  dev-requirements.txt  psycopg2_setup.sh  setup.cfg  setup.py  tasks.py
.github/workflows/: ci.yaml
app/: __init__.py  __main__.py
conf/: logging.conf  pipeline.template.conf
linux_references/: alias  config.template  screen  ssh  upgrading_pythonversion
postgresql_references/: install_start_server.sh  references  setup.sh
postgresql_references/tutorial/sql/: create_cities.ddl  create_weather.ddl  insert_weather.sql
scripts/: execute_tasks.py  geopy_address_lookup.py  request_address_verifications.py  run_script.py  sf-query.txt
scripts/tools/: append_csv.py  export_set.py  read_set.py  read_split.py
src/address_verification/: __init__.py  aws.py  funcs.py  psql.py  sf.py  tasks.py
src/celery_template/: __init__.py  aws.py  csv.py  funcs.py  psql.py  sf.py  tasks.py
tests/scripts/: test_psqlconnect.py  test_psqlselect.py  test_sample.py  test_sf_connection.py  test_tasks.py
